frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk046-ask-mento
  namespace: skala-practice
spec:
  selector:
    app: sk046-ask-mento
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
